feat: add basic attendance reports
